Fix a mobile layout issue introduced by f84b6e26e5
Bundling the css files to app.css changed the order of some rules and
the order happened to be significant here: The mobile rule did not
override the standard rule as intended. Fixed by making the mobile rule
more specific.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -85,11 +85,11 @@
 	clear: both;
 }
 /* align track title to the left with album title */
-.mobile .album-area .track-list > li {
+.mobile .album-area .track-list > li:not(.more-less) {
 	padding-left: 40px;
 }
 .mobile .album-area .track-list > li.more-less {
-	padding-left: 59px;
+	padding-left: 57px;
 }
 
 /* allow track name to span the whole view width and on multiple lines */
